objects/Page_Component__c.object
<CustomObject>
    <fields>
        <fullName>Chatter_Group__c</fullName>
        <label>Chatter Group</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Tag__c</fullName>
        <description>Include the bootstrap grid css class(es) here.</description>
        <inlineHelpText>Include the bootstrap grid css class(es) here.</inlineHelpText>
        <label>Class Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_ID__c</fullName>
        <label>Component ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Order__c</fullName>
        <label>Component Order</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <picklist>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visualforce Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Content__c</fullName>
        <label>Main Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <label>Migration Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portal Page Component</label>
        <referenceTo>Page_Component__c</referenceTo>
        <relationshipLabel>Portal Page Components</relationshipLabel>
        <relationshipName>Portal_Page_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_Page__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Portal Page</label>
        <referenceTo>Portal_Page__c</referenceTo>
        <relationshipLabel>Portal Page Components</relationshipLabel>
        <relationshipName>Page_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VFPageName__c</fullName>
        <label>VFPageName</label>
        <length>225</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_ID__c</fullName>
        <label>Video ID</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Portal Page Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Migration_Id__c</columns>
        <columns>NAME</columns>
        <columns>Portal_Page__c</columns>
        <columns>Component_Order__c</columns>
        <columns>VFPageName__c</columns>
        <columns>Component_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Page Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Page Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>